# ChangeLog for app-text/asciidoc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.50 2009/11/06 00:05:52 patrick Exp $

*asciidoc-8.5.0 (06 Nov 2009)

  06 Nov 2009; Patrick Lauer <patrick@gentoo.org> +asciidoc-8.5.0.ebuild:
  Bump to 8.5.0, fixes #290747

  27 Jun 2009; Patrick Lauer <patrick@gentoo.org> asciidoc-8.4.5.ebuild:
  Adding app-text/docbook-xml-dtd-4.5 to RDEPEND in the hope to fix #272010

*asciidoc-8.4.5 (27 Jun 2009)

  27 Jun 2009; Patrick Lauer <patrick@gentoo.org> +asciidoc-8.4.5.ebuild:
  Bump to 8.4.5, small fixes by Tim Harder. Closes #275570

*asciidoc-8.4.4 (22 May 2009)

  22 May 2009; Patrick Lauer <patrick@gentoo.org> +asciidoc-8.4.4.ebuild:
  Bump to 8.4.4, closes #270644. Ebuild fixups by Andre-Patrick Bubel

  13 Nov 2008; Brent Baude <ranger@gentoo.org> asciidoc-8.2.6.ebuild:
  stable ppc64, bug 224743

  08 Nov 2008; nixnut <nixnut@gentoo.org> asciidoc-8.2.6.ebuild:
  Stable on ppc wrt bug 224743

  07 Nov 2008; Raúl Porcel <armin76@gentoo.org> asciidoc-8.2.6.ebuild:
  alpha/ia64 stable wrt #224743

  06 Nov 2008; Jeroen Roovers <jer@gentoo.org> asciidoc-8.2.6.ebuild:
  Stable for HPPA (bug #224743).

  02 Nov 2008; Ferris McCormick <fmccor@gentoo.org> asciidoc-8.2.6.ebuild:
  Sparc stable, Bug #224743.

  02 Nov 2008; Markus Meier <maekke@gentoo.org> asciidoc-8.2.6.ebuild:
  amd64/x86 stable, bug #224743

*asciidoc-8.2.7 (18 Oct 2008)

  18 Oct 2008; Peter Volkov <pva@gentoo.org> +asciidoc-8.2.7.ebuild:
  Version bump, thank Alex Efros for report, bug #240355, also should fix
  bug #193966.

*asciidoc-8.2.6 (16 Jun 2008)

  16 Jun 2008; Leonardo Boshell <leonardop@gentoo.org>
  -asciidoc-7.1.2.ebuild, +asciidoc-8.2.6.ebuild:
  Version bump. Added 'vim-syntax' flag (thanks to Vaclav Slavik for the
  patch on bug #190702).

  25 Jan 2008; Fabian Groffen <grobian@gentoo.org> asciidoc-7.0.4.ebuild,
  asciidoc-7.1.2.ebuild, asciidoc-8.1.0.ebuild: