@@ -1,10 +1,4 @@
-DIST asciidoc-8.2.7.tar.gz 843238 RMD160 d9b19b5bd90a7ee26b3d63ba8b5f6ce60841e62c SHA1 ec784654f01f3aa71af6453c8985839010759fab SHA256 da021d8f32e1bcacfd11b5bb12bd9a9cd9ec9532ad1a54bcd53fed211fe71af6
-DIST asciidoc-8.4.4.tar.gz 1160222 RMD160 96eb1569db0fa8c2e78cc713ee72a0c25646d3be SHA1 0306d1a41eb1060873ba4fa655112aeaa64001d1 SHA256 43181d4753376fe22d8a7949a94b5ebb439fd94a7b92791e9126e82632adfa62
-DIST asciidoc-8.4.5.tar.gz 1189280 RMD160 4e210df26962c1154cc131e3549b92762eefc8f7 SHA1 b1a8488f0c217a00084fa5f9f36cecc522e79b34 SHA256 e7e4df8fd984520ee692bb639679d51f5be279ef96dc23efd229e2bc100152db
-DIST asciidoc-8.5.0.tar.gz 1229187 RMD160 82ed69c2adaf60cbcafcbd1df5bc5445704c2335 SHA1 bfdc746340780884a90145ef78528ca4a71e3a02 SHA256 a21fe32360e629cd9e7b443e0893ca0dd12978212a9e9ae1e6d3055b169c5bc9
-EBUILD asciidoc-8.2.7.ebuild 1746 RMD160 2844b5697962600847aaa4287b4e7fd2685d82d1 SHA1 d989c59d067cdc70778d9e51859f3f82d23dab1c SHA256 6789b8cad68537fb43d0ee3c08949f061b2e5738496c0b61907c89b1ae3cb7fb
-EBUILD asciidoc-8.4.4.ebuild 1871 RMD160 9b84960fad6adc754911158bba441f051397d79f SHA1 66c4c928432dca44fcbfdf27404267c75eaac31c SHA256 a4c0d96fb64e33e2f541ac8380823974b3ed35cf3ca9911d61715aeed8c05a48
-EBUILD asciidoc-8.4.5.ebuild 1924 RMD160 8ebaaa591e8937596440de6a17ca39ec3e988ad3 SHA1 e327caa037ea93c1d6784d8ba620204589096db9 SHA256 dd90205e4c783dbd574b5f465bc1166b1f1181c5c5b01d0ae3d07714c49fcb4f
-EBUILD asciidoc-8.5.0.ebuild 1924 RMD160 12ad6f5b378c131e6887a81371dea296abd0b6f2 SHA1 c177bf3e2095721d6525aa6bf8e7b56a99ca9ba3 SHA256 7856dda650fa6758429288117d6fc484507f4466289b46a2c616f677e4d039c6
-MISC ChangeLog 6892 RMD160 b39ce3fed9194b71981f0a6e94931b3fdbaf6d0d SHA1 89a8d714a7ad50f9cc5beeb66dfb0ca33d5338b0 SHA256 71bc83b9445995f7373e9f2c1422c10440a2aad8aa24621416008cc321401f02
+DIST asciidoc-8.5.1.tar.gz 1242674 RMD160 cc24f6befc53b493e18f2dc186b4849302c176b3 SHA1 e8c043d9a10ada9c38cb6725e5c00895f474ae5a SHA256 ccb02db04e6e6eff2149435516e88557ca30c85bc4467420f40c895e25f17a20
+EBUILD asciidoc-8.5.1.ebuild 1801 RMD160 0eaeaf51390db645f61d0801d1863670cf268e07 SHA1 47a5ba32c2b0508c4c153a385415b3dbc59ff0fe SHA256 27751d36b3a5976ef644a871ac0d154d36071da2740da13b4d9dffe71ecfbbbb
+MISC ChangeLog 7397 RMD160 510aba31f01d0dace30edb704f25aed4136fe56d SHA1 ed71255067ea5c61398c8abf4cfca00d58034777 SHA256 37a09a47857831029516c6894533344c68b6e09768986bc453fdd4ee03fa2170
 MISC metadata.xml 159 RMD160 a94e7b2c191d1593b8bc416d266571e001c2f673 SHA1 3c1d0831d8acacef390234d20d7711cabded861a SHA256 52cf1b9dda72e2d61fef95515c8a124ac9f1196e5509e5636e269f396fcba8a3
